RESOLVED FIXED11476
REGRESSION: Nesting the IMG tag inside of MAP fails to render correctly in ToT
https://bugs.webkit.org/show_bug.cgi?id=11476
Summary REGRESSION: Nesting the IMG tag inside of MAP fails to render correctly in ToT
Troy Brandt
Reported 2006-10-31 16:10:38 PST
Nesting the IMG tag within the MAP tag fails to render the image. This works in Firefox and Safari Version 2.0.4 (419.3) but fails in WebKit 17499 as well as 13302.
Attachments
reduction (2.36 KB, text/html)
2006-10-31 16:11 PST, Troy Brandt
no flags
Troy Brandt
Comment 1 2006-10-31 16:11:58 PST
Created attachment 11313 [details] reduction
Troy Brandt
Comment 2 2006-10-31 16:13:48 PST
I should add, you can see the problem yourself by following this link: http://www.davegh.com/blade/davegh.htm And clicking one of the link under "old material". I've also included a reduction.
mitz
Comment 3 2007-01-19 01:42:51 PST
(In reply to comment #0) > This works in Firefox Only in quirks mode.
Mark Rowe (bdash)
Comment 4 2007-01-28 19:01:11 PST
Lars Knoll
Comment 5 2007-02-17 14:33:29 PST
Fixed in r19685
Note You need to log in before you can comment on or make changes to this bug.