2007-02-17  Lars Knoll <lars@trolltech.com>

LayoutTests:

        Reviewed by Adam.

        test for http://bugs.webkit.org/show_bug.cgi?id=11476
        <img> tags nested inside <map> where not showing up

        * fast/images/image-in-map-expected.checksum: Added.
        * fast/images/image-in-map-expected.png: Added.
        * fast/images/image-in-map-expected.txt: Added.
        * fast/images/image-in-map.html: Added.

WebCore:

        Reviewed by Adam.

        fix http://bugs.webkit.org/show_bug.cgi?id=11476
        <img> tags nested inside <map> where not showing up

        Test: fast/images/image-in-map.html

        * html/HTMLMapElement.cpp:
        (WebCore::HTMLMapElement::checkDTD):



Canonical link: https://commits.webkit.org/16549@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19685 268f45cc-cd09-0410-ab3c-d52691b4dbfc